// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScreenshotView render matches snapshot when passed empty screenshotData {} 1`] = `
<div
  className="visualHelperSection"
  data-automation-id="screenshot-view"
  role="complementary"
>
  <h2
    className="header"
  >
    Target app screenshot
  </h2>
  <p>
    Screenshot for scan is unavailable
  </p>
</div>
`;

exports[`ScreenshotView render matches snapshot when passed empty screenshotData null 1`] = `
<div
  className="visualHelperSection"
  data-automation-id="screenshot-view"
  role="complementary"
>
  <h2
    className="header"
  >
    Target app screenshot
  </h2>
  <p>
    Screenshot for scan is unavailable
  </p>
</div>
`;

exports[`ScreenshotView render matches snapshot when passed empty screenshotData undefined 1`] = `
<div
  className="visualHelperSection"
  data-automation-id="screenshot-view"
  role="complementary"
>
  <h2
    className="header"
  >
    Target app screenshot
  </h2>
  <p>
    Screenshot for scan is unavailable
  </p>
</div>
`;

exports[`ScreenshotView render matches snapshot when screenshot data is available 1`] = `
<div
  className="visualHelperSection"
  data-automation-id="screenshot-view"
  role="complementary"
>
  <h2
    className="header"
  >
    Target app screenshot
  </h2>
  <ScreenshotContainer
    highlightBoxViewModels={Array []}
    screenshotData={
      Object {
        "base64PngData": "test-base-64-png-data",
      }
    }
  />
</div>
`;
